created CRUD functions for ticket